// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPageBlocks Paragraph should render correctly - dark mode 1`] = `
.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  padding-bottom: 16px;
  color: #F2F2F2;
}

@media (min-width: 20rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-1 {
    padding-bottom: 0.5rem;
  }
}

<div>
  <p
    class="emotion-0 emotion-1"
    id="idAttr"
  >
    Example text
  </p>
</div>
`;

exports[`MediaPageBlocks Paragraph should render correctly 1`] = `
.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  padding-bottom: 16px;
  color: #6E6E73;
}

@media (min-width: 20rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-1 {
    padding-bottom: 0.5rem;
  }
}

<div>
  <p
    class="emotion-0 emotion-1"
    id="idAttr"
  >
    Example text
  </p>
</div>
`;
